description page fix

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/webdoctor
 spring.datasource.username=root
-spring.datasource.password=purdue2014er
+spring.datasource.password=webdoctor
 spring.datasource.auto-commit=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initial-size=5
